- Update NPM dependencies - Adds 'npm run publish' script to publish to GHPages. - Update package.json to 0.0.2 - Eliminates the 'filename' field in gallery/index.json. Instead, the filename of the gallery source file is derived from the title by appending '.md'. - Renames fractal.md to JuliaSet.md to respect new index.json naming system. - Factor more notes-related code into src/boot/notes.js. This is in preparation for replacing the use of a numeric index for a note with the use of its 'title'. A work in progress. - Fade the kiosk button so it is not visible unless 'hover' or 'touch' happens. - Display notes in reverse order of creation. In other words, newest notes at the top of the list. - Fix some issues where the note editing buttons were being displayed on the index page, as opposed to only being displayed on the Note.vue page. - Strip '.md' from the filename when importing from GitHub or Desktop, and add it back when Exporting. - JuliaSet.md: Add Mousewheel-based zooming for desktop and web. Seems to work with two-finger trackpad 'wheel emulation' mode, too. - JuliaSet.md: Fix a glitch where Pan events would be picked up during Pinch events, resulting in a sudden shift after the Pinch is releases. - JuliaSet.md: Eliminate use of Press gesture, since it is no longer needed due to above fix. - JuliaSet.md: Add double-click to Zoom and Recenter the image. - JuliaSet.md: Use SQ.setToolbarFade(true) instead of custom CSS.

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -5,6 +5,23 @@
   width: 100%;
 }
 
+.smartdown-container
+.playable-wrapper-wrapper
+.playable-wrapper.playable-playing
+button.kiosk-button
+{
+	opacity: 0;
+  transition: opacity 5s;
+}
+
+.smartdown-container
+.playable-wrapper-wrapper
+.playable-wrapper.playable-playing
+button.kiosk-button:hover {
+	opacity: 1;
+  transition: opacity 2s;
+}
+
 .readonly-border {
 	margin: 0;
 	padding: 0;
